# FastApi---App

./: firstApi.py  main.py  pyproject.toml
SQLALCHMY/: database.py  main.py  models.py  oauth2.py  oayth2.py  schemas.py  utils.py
SQLALCHMY/routers/: auth.py  login.py  post.py  user.py
app/: db.py  main.py
